adicionando pageble